2009-01-08  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* templates/base.html: Revert to 'Log out' as Django.

2009-01-08  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: Use utils.url_join to create URLs. Make bugs_component
	optional.
	Fixes bugs #566960, #566961.
	* stats/utils.py: Add new url_join utility function.
	* templates/vertimus/vertimus_detail.html: Show doc images icon next to
	the string stats.

2009-01-07  Claude Paroz  <claude@2xlibre.net>

	* stats/utils.py: msgfmt outputs stats on stderr.
	Fixes bug #566934.

2009-01-07  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: Prevent a division by 0 in stats percentage computing.

2009-01-07  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py:
	* stats/utils.py: Don't mix stdout with stderr, return separate variables.

2009-01-06  Claude Paroz  <claude@2xlibre.net>

	* media/css/main.css:
	* templates/people/person_overview.html: Make all text align to the right
	of the image.
	* vertimus/models.py: Fixed get_name which is a function call, not a
	property.

2009-01-05  Andre Klapper  <a9016009@gmx.de>

	* people/models.py:
	* templates/register.html:
	Fixed two typos.

2009-01-05  Claude Paroz  <claude@2xlibre.net>

	* vertimus/models.py: Fix error state -> old_state. Improve translation
	and mail layout.

2009-01-05  Claude Paroz  <claude@2xlibre.net>

	* vertimus/models.py: Send mail from Vertimus with SERVER_EMAIL in From:
	field. Translate the mail message with the language of the object locale
	instead of the current user pref.

2009-01-05  Claude Paroz  <claude@2xlibre.net>

	* templates/people/person_detail.html:
	* templates/teams/team_detail.html: Translation improvements.
	* templates/teams/team_base.html: Correct path to template.

2009-01-04  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	Many changes to the user account management interface.
	
	* media/css/main.css: Adjustments for person detail and list.